--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
   "license": "MIT",
   "repository": "git@github.com:dbartholomae/jsx-md.git",
   "devDependencies": {
-    "jest": "^26.4.2"
+    "@types/jest": "^26.0.10",
+    "@types/mock-fs": "^4.10.0",
+    "jest": "^26.4.2",
+    "mock-fs": "^4.13.0",
+    "ts-jest": "^26.2.0",
+    "tslib": "^2.0.1",
+    "typescript": "^4.0.2"
   }
 }
