--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "@types/mock-fs": "^4.10.0",
+    "@types/react": "^16.9.46",
+    "@types/react-reconciler": "^0.18.0",
     "jest": "^26.4.2",
     "mock-fs": "^4.13.0",
     "ts-jest": "^26.2.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "react-reconciler": "^0.25.1"
   }
 }
