--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Generate markdown files with a React-like syntax.",
   "main": "lib/index.js",
   "scripts": {
+    "build": "rimraf lib && tsc -p tsconfig.build.json",
     "test": "jest"
   },
   "keywords": [
@@ -21,6 +22,7 @@
     "@types/mock-fs": "^4.10.0",
     "jest": "^26.4.2",
     "mock-fs": "^4.13.0",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.2.0",
     "tslib": "^2.0.1",
     "typescript": "^4.0.2"
