--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es5",
-    "lib": ["es6", "dom", "es2015.promise"],
+    "target": "es2017",
+    "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
