--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/jest": "^26.0.10",
     "jest": "^26.4.2",
+    "prettier": "^2.1.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^26.2.0",
     "tslib": "^2.0.1",
