--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,12 @@
     "module": "commonjs",
     "esModuleInterop": true,
     "target": "es2017",
-    "lib": ["es2019", "es2020.bigint", "es2020.string", "es2020.symbol.wellknown"],
+    "lib": [
+      "es2019",
+      "es2020.bigint",
+      "es2020.string",
+      "es2020.symbol.wellknown"
+    ],
     "sourceMap": true,
     "jsx": "react",
     "moduleResolution": "node",
