--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "build": "rimraf lib && tsc -p tsconfig.build.json",
+    "lint": "eslint src/**/*.ts src/**/*.tsx examples/**/*.tsx",
     "test": "jest"
   },
   "engines": {
@@ -22,6 +23,12 @@
   "repository": "git@github.com:dbartholomae/jsx-md.git",
   "devDependencies": {
     "@types/jest": "^26.0.10",
+    "@typescript-eslint/parser": "^2.26.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-react": "^7.20.6",
     "jest": "^26.4.2",
     "prettier": "^2.1.0",
     "rimraf": "^3.0.2",
