--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -5,5 +5,5 @@
     "rootDir": "src"
   },
   "include": ["src/**/*"],
-  "exclude": ["src/**/*.test.tsx?"]
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"]
 }
