--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
   "license": "MIT",
   "repository": "git@github.com:dbartholomae/jsx-md.git",
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-conventional": "^9.1.2",
     "@types/jest": "^26.0.10",
-    "@typescript-eslint/parser": "^3.10.1",
     "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.20.6",
+    "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "lint-staged": "^10.2.13",
     "pkg-ok": "^2.3.1",
     "prettier": "^2.1.0",
     "rimraf": "^3.0.2",
