--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,11 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Use Node.js 12.x
+      with:
+        fetch-depth: 0
+    - name: Lint commit messages
+      uses: wagoid/commitlint-github-action@v2
+    - name: Setup Node.js
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
@@ -20,15 +24,15 @@ jobs:
       uses: pnpm/action-setup@v1.2.0
       with:
         version: ^5.5.4
-    - name: install
+    - name: Install
       run: pnpm install
-    - name: build
+    - name: Build
       run: pnpm run build
-    - name: lint
+    - name: Lint
       run: pnpm run lint
-    - name: run unit tests
+    - name: Run unit tests
       run: pnpm test
-    - name: upload code coverage to codecov
+    - name: Upload code coverage to codecov
       uses: codecov/codecov-action@v1
 
   publish:
@@ -38,7 +42,7 @@ jobs:
     steps:
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: Use Node.js 12.x
+    - name: Setup Node.js
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
@@ -46,19 +50,19 @@ jobs:
       uses: pnpm/action-setup@v1.2.0
       with:
         version: ^5.5.4
-    - name: install
+    - name: Install
       run: pnpm install
-    - name: build
+    - name: Build
       run: pnpm run build
-    - name: set git credentials
+    - name: Set git credentials
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-    - name: set npm credentials
+    - name: Set npm credentials
       run: echo //registry.npmjs.org/:_authToken=$NPM_AUTH_TOKEN > ~/.npmrc
       env:
         NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }}
-    - name: publish
+    - name: Publish
       uses: cycjimmy/semantic-release-action@v2
       with:
         semantic_version: 17
