--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "rimraf lib && tsc -p tsconfig.build.json",
-    "doc": "typedoc",
+    "docs": "typedoc && touch docs/.nojekyll",
     "lint": "eslint src/**/*.ts src/**/*.tsx examples/**/*.tsx",
     "test": "jest && pkg-ok"
   },
