--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint-plugin-react": "^7.20.6",
     "husky": "^4.2.5",
     "jest": "^26.4.2",
+    "jest-extended": "^0.11.5",
     "lint-staged": "^10.2.13",
     "pkg-ok": "^2.3.1",
     "prettier": "^2.1.0",
