chore: ignore lib directory in TypeScript

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,6 @@
     "resolveJsonModule": true,
     "strict": true
   },
-  "include": ["**/*"]
+  "include": ["**/*"],
+  "exclude": ["lib/**/*"]
 }
