--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@semantic-release/git": "^10.0.0",
     "@semantic-release/github": "^8.0.0",
     "@types/jest": "^28.1.0",
+    "@types/node": "^24.0.3",
     "@types/react": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
